--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "to-do-app",
+  "name": "find-it",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +9,11 @@
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.13.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
@@ -39,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "https://maps.googleapis.com/maps/api/place/textsearch/json"
+  "proxy": "https://maps.googleapis.com/maps/api/place/textsearch/json"
 }
