--- a/client/src/app.json
+++ b/client/src/app.json
@@ -1,4 +1,4 @@
 {
-    "base_url": "https://find-it-by-golden-ogbeka.herokuapp.com/",
+    "base_url": "https://find-it-by-golden-ogbeka.herokuapp.com",
     "api_key": "AIzaSyD6vqUaBu3C116azfxEROnVJF8jWdXGDrA"
 }
